--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="head-1">
-            <img src="./images/logo.svg">
+            <img src="./images/logo.svg" alt="">
             <a href="#">
                 <button class="head-btn">Try It Free</button>
             </a>
@@ -39,9 +39,9 @@
     <main>
         <div class="main-1" id="main-1" onmouseover="anim();" onmouseleave="anim_out();">
             <div class="main-1-text">
-                <h3>
+                <h2>
                     Grow Together
-                </h3>
+                </h2>
                 <p>
                     Generate meaningful discussions with your audience and build a strong, loyal community. Think of the
                     insightful conservations you miss out on with a feedback form.
@@ -56,9 +56,9 @@
                 <img src="./images/illustration-flowing-conversation.svg" alt="">
             </div>
             <div class="main-2-text">
-                <h3>
+                <h2>
                     Flowing Conversations
-                </h3>
+                </h2>
                 <p>
                     You wouldn't paginate a conversation in real life, so why do it online? Our threads have
                     just-in-time loading for a more natural flow.
@@ -67,9 +67,9 @@
         </div>
         <div class="main-3" id="main-3" onmouseover="anim_2();" onmouseleave="anim_out_2();">
             <div class="main-3-text">
-                <h3>
+                <h2>
                     Your Users
-                </h3>
+                </h2>
                 <p>
                     It takes no time at all to integrate Huddle with your app's authentication solution. This means,
                     once signed in to your app, your users can start chatting immediately.
@@ -80,15 +80,15 @@
             </div>
         </div>
     </main>
-    <section class="main-4">
-        <h2>
-            Ready To Build Your Community?
-        </h2>
-        <a href="#">
-            <button class="footer-btn">Get Started For Free</button>
-        </a>
-    </section>
     <footer>
+        <div class="ftr-CTO">
+            <h2>
+                Ready To Build Your Community?
+            </h2>
+            <a href="#">
+                <button class="footer-btn">Get Started For Free</button>
+            </a>
+        </div>
         <div class="foot-1">
             <div class="foot-logo">
                 <img src="./images/logo-ftr.png" alt="">
