--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="head-1">
-            <img src="./images/logo.svg" alt="">
+            <img src="./images/logo.svg" alt="logo">
             <a href="#">
                 <button class="head-btn">Try It Free</button>
             </a>
@@ -91,7 +91,7 @@
         </div>
         <div class="foot-1">
             <div class="foot-logo">
-                <img src="./images/logo-ftr.png" alt="">
+                <img src="./images/logo-ftr.png" alt="logo">
             </div>
             <div class="location">
                 <img src="icon-location.svg" alt="">
