Fixed HTML Validation Issues

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="head-1">
             <img src="./images/logo.svg" alt="logo">
             <a href="#">
-                <button class="head-btn">Try It Free</button>
+                Try It Free
             </a>
         </div>
         <div class="head-2">
@@ -28,7 +28,7 @@
                     connections with your users as you engage in genuine discussion.
                 </p>
                 <a href="#">
-                    <button class="text-btn">Get Started For Free</button>
+                    Get Started For Free
                 </a>
             </div>
             <div class="head-2-img">
@@ -85,8 +85,8 @@
             <h2>
                 Ready To Build Your Community?
             </h2>
-            <a href="#">
-                <button class="footer-btn">Get Started For Free</button>
+            <a href="#" class="ftr-btn">
+                Get Started For Free
             </a>
         </div>
         <div class="foot-1">
